# generate_project

./: .current_project.tmp  README.md  function.txt  install_project.sh  mproject.sh  project.sh  project_task  task
compress/: CMakeLists.txt
compress/.proj_config/: proj_config.sh
compress/main/: CMakeLists.txt  main.cc
compress/output/: compress_exe
compress/output/config/: test.rjf
compress/src/: CMakeLists.txt
script/: generate_cpp_src_file.sh  generate_proj_cmake_config.sh  generate_proj_cmake_file.sh  generate_proj_cmake_file_v2.sh  generate_proj_config.sh  generate_vscode_debug_config.sh  project_config_manager.sh  write_project_daily_record.sh
test/: CMakeLists.txt
test/.proj_config/: proj_config.sh
test/.proj_config/record/: daily_record  plan
test/main/: CMakeLists.txt
test/src/: CMakeLists.txt
